deployments/pathweb/workloads/home-network-privileged/slzb-ultima-wg/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slzb-ultima-wg
  namespace: home-network-privileged
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: slzb-ultima-wg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: slzb-ultima-wg
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"slzb-ultima-wg-iot-network"}]'
    spec:
      priorityClassName: rfhome-home-critical
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      # - name: proxy-radio1
      #   image: alpine/socat:latest
      #   env:
      #   - name: POD_IP
      #     valueFrom:
      #       fieldRef:
      #         fieldPath: status.podIP
      #   args:
      #   - TCP-LISTEN:6638,bind=$(POD_IP),fork,reuseaddr
      #   - TCP:192.168.229.2:6638
      #   securityContext:
      #     allowPrivilegeEscalation: false
      #     readOnlyRootFilesystem: true
      #     runAsNonRoot: true
      #     runAsUser: 1000
      #     runAsGroup: 1000
      #     capabilities:
      #       drop:
      #       - ALL
      #   ports:
      #   - containerPort: 6638
      #     name: radio1
      #     protocol: TCP
      #   resources:
      #     limits:
      #       cpu: 10m
      #       memory: 16Mi
      #     requests:
      #       cpu: 1m
      #       memory: 8Mi
      #   livenessProbe:
      #     tcpSocket:
      #       port: 6638
      #     initialDelaySeconds: 5
      #     periodSeconds: 10
      #   readinessProbe:
      #     tcpSocket:
      #       port: 6638
      #     initialDelaySeconds: 5
      #     periodSeconds: 10
      - name: proxy-radio2
        image: alpine/socat:latest
        args:
        - TCP-LISTEN:7638,bind=$(POD_IP),fork,reuseaddr
        - TCP:192.168.229.2:7638
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 7638
          name: radio2
          protocol: TCP
        resources:
          limits:
            cpu: 10m
            memory: 16Mi
          requests:
            cpu: 1m
            memory: 8Mi
        livenessProbe:
          tcpSocket:
            port: 7638
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 7638
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: proxy-http
        image: alpine/socat:latest
        args:
        - TCP-LISTEN:80,bind=$(POD_IP),fork,reuseaddr
        - TCP:192.168.229.2:80
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 10m
            memory: 16Mi
          requests:
            cpu: 1m
            memory: 8Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: proxy-otbr
        image: alpine/socat:latest
        args:
        - TCP-LISTEN:8080,bind=$(POD_IP),fork,reuseaddr
        - TCP:192.168.229.2:8080
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8080
          name: otbr
          protocol: TCP
        resources:
          limits:
            cpu: 10m
            memory: 16Mi
          requests:
            cpu: 1m
            memory: 8Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: wireguard-config
        secret:
          secretName: slzb-ultima-wg-secrets
      - name: slzb-ultima-wg-data
        persistentVolumeClaim:
          claimName: slzb-ultima-wg-data
